updated trading game

--- a/module-control-index.html
+++ b/module-control-index.html
@@ -17,11 +17,14 @@
               <div class="card-header">Module Controller</div>
               <div class="card-body">
                 <h5 class="card-title">Module Controller</h5>
-                    <button id="cc-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('0')">Waiting room</button>
-                    <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('1')">Module 1</button>
-                    <button id="mm-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2')">Module 2</button>
-                    <button id="gg-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('3a')">Module 3a</button>
-                    <button id="gg-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('3b')">Module 3b</button>
+                    <button id="aa-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('0')">Waiting room</button>
+                    <button id="bb-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('1')">Module 1</button>
+                    <button id="cc-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2')">Module 2</button>
+                    <button id="dd-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('3a')">Module 3a</button>
+                    <button id="ee-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('3b')">Module 3b</button>
+                    <button id="ff-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2g.1')">Module 2g SYMPH</button>
+                    <button id="gg-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2g.2')">Module 2g SYNTH</button>
+                    <button id="hh-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('btc')">Trading Game vote</button>
               </div>
             </div>
         </div>
