--- a/modules/interface/module2.html
+++ b/modules/interface/module2.html
@@ -14,8 +14,8 @@
             <div class="card text-white bg-dark mb-3 voting-card">
               <div class="card-header">ALGORITHM PROCESSING</div>
               <div class="card-body">
-                <h3 class="card-title">Which way to go?</h3>
-                <h4 class="card-text">Earth or Tau Ceti G?</h4>
+                <h3 class="card-title">จุดหมายต่อไปคือที่ใด?</h3>
+                <h4 class="card-text">Earth หรือ Tau Ceti G?</h4>
                     <button id="cc-btn" type="button" class="btn btn-light btn-vote-option" onclick="castVote('1')">Earth</button>
                     <br>
                     <br>
