--- a/modules/interface/module3a.html
+++ b/modules/interface/module3a.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Module 2</title>
+    <title>Module 3a</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -15,11 +15,11 @@
               <div class="card-header">ALGORITHM PROCESSING</div>
               <div class="card-body">
                 <h3 class="card-title">Time to make a SYMPHONIC decision.</h3>
-                <h4 class="card-text">Let Dr.SYMPH come with us?</h4>
-                    <button id="cc-btn" type="button" class="btn btn-light btn-vote-option" onclick="castVote('1')">Dr.SYMPH On Baord</button>
+                <h4 class="card-text">ให้ Dr.SYMPH มาด้วยกันหรือไม่?</h4>
+                    <button id="cc-btn" type="button" class="btn btn-light btn-vote-option" onclick="castVote('1')">Dr.SYMPH ขึ้นยาน</button>
                     <br>
                     <br>
-                    <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castVote('2')">Permission declined</button>
+                    <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castVote('2')">ปฎิเสธนักวิชาการ</button>
               </div>
             </div>
         </div>
