--- a/modules/interface/module3b.html
+++ b/modules/interface/module3b.html
@@ -15,11 +15,11 @@
               <div class="card-header">ALGORITHM PROCESSING</div>
               <div class="card-body">
                 <h3 class="card-title">Time to make a SYNTHETIC decision.</h3>
-                <h4 class="card-text">Let SYNTH come with us?</h4>
-                    <button id="cc-btn" type="button" class="btn btn-light btn-vote-option" onclick="castVote('1')">SYNTH On Board</button>
+                <h4 class="card-text">ให้ SYNTH มาด้วยกันหรือไม่?</h4>
+                    <button id="cc-btn" type="button" class="btn btn-light btn-vote-option" onclick="castVote('1')">SYNTH ขึ้นยาน</button>
                     <br>
                     <br>
-                    <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castVote('2')">Permission declined</button>
+                    <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castVote('2')">ปฏิเสธนักท่องอวกาศ</button>
               </div>
             </div>
         </div>
