--- a/current-module.html
+++ b/current-module.html
@@ -12,10 +12,25 @@
       src="https://cdn.ably.io/lib/ably.min-1.js"
     ></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kanit">
+    <link rel="stylesheet" href="style.css" />
+    <style>
+      body {
+        background-color: #687296;
+      }
+  </style>
   </head>
 
   <body>
-    <div id="current-module">Current module</div>
+    <div id="current-module">
+      <br>
+      <br>
+      <br>
+      <br>
+      <h1 style="color: #f5eced; text-align: center; padding: 10%; font-family: kanit, sans-serif; text-shadow: 1px 1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;">Algorithm</h1>
+      <br>
+      <h1 style="color: #f5eced; text-align: center; padding: 10%; font-family: kanit, sans-serif; text-shadow: 1px 1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;">standing by ...</h1>
+      </div>
   </body>
 
   <script src="current-module.js" type="text/javascript"></script>
