--- a/modules/interface/waiting-room.html
+++ b/modules/interface/waiting-room.html
@@ -5,12 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Waiting room</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet1" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet2" href="https://fonts.googleapis.com/css?family=Kanit">
+    <link rel="stylesheet3" href="style.css" />
+    <style>
+        body {
+          background-color: #687296;
+        }
+    </style>
 </head>
 <body>
-    <h1>Algorithm</h1>
+    <div style="text-align: center; padding: 10%; font-family: kanit, sans-serif; text-shadow: 1px 1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;">
     <br>
-    <h1>standing by ...</h1>
+    <br>
+    <br>
+    <br>
+    <h1 style="color: #f5eced">Algorithm</h1>
+    <br>
+    <h1 style="color: #f5eced">standing by ...</h1>
+    </div>
 </body>
 </html>
