--- a/modules/interface/module2.html
+++ b/modules/interface/module2.html
@@ -5,26 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module 2</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet1" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet2" href="style.css" />
+    <link rel="stylesheet3" href="https://fonts.googleapis.com/css?family=Kanit">
+    <style>
+        body {
+          background-color: #687296;
+        }
+
+        h1 {
+        font-size: 30px;
+        }
+
+        h3 {
+        font-size: 25px;
+        }
+
+        h4 {
+        font-size: 25px;
+        }
+
+        p {
+        font-size: 40px;
+        }
+    </style>
 </head>
 <body>
     <div class = content>
-        <div style="text-align: center; padding: 6%;">
-            <div class="card text-white bg-dark mb-3 voting-card">
-              <div class="card-header">ALGORITHM PROCESSING</div>
-              <div class="card-body">
-                <h3 class="card-title">Which way to go?</h3>
-                <h4 class="card-text">Earth or Tau Ceti G?</h4>
-                    <button id="cc-btn" type="button" class="btn btn-light btn-vote-option" onclick="castVote('1')">Earth</button>
-                    <br>
-                    <br>
-                    <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castVote('2')">Tau Ceti G</button>
-                    <br>
-                    <br>
-                    <button id="aa-btn" type="button" class="btn btn-light btn-vote-option" onclick="castVote('3')">High-Frequency Zone</button>
-              </div>
-            </div>
+        <div style="text-align: center; padding: 10%; font-family: kanit, sans-serif; text-shadow: 1px 1px 2px gray, 0 0 25px white, 0 0 5px whitesmoke">
+           
+              <h1 style="color: #f5eced">ALGORITHM PROCESSING</h1>
+              <br>
+                <h3 style="color: #f5eced">"จุดหมายต่อไปคือที่ใด?"</h3>
+                <h4 style="color: #f5eced">Earth หรือ Tau Ceti G?</h4>
+                    <p id="cc-btn" style="color: #87cdee" onclick="castVote('1')">Earth</p>
+                    <p id="tt-btn" style="color: #bdbdbd; font-size: 35px;" onclick="castVote('2')">Tau Ceti G</p>
+                    <p id="aa-btn" style="color: #ff8d9b; font-size: 30px;" onclick="castVote('3')">High-Frequency Zone</p>
+           
         </div>
     </div>
 
