--- a/modules/interface/module2g-1.html
+++ b/modules/interface/module2g-1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Module 3b</title>
+    <title>Module 2g-1</title>
     <link rel="stylesheet1" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet2" href="style.css" />
     <link rel="stylesheet3" href="https://fonts.googleapis.com/css?family=Kanit">
@@ -22,11 +22,11 @@
         }
 
         h4 {
-        font-size: 22px;
+        font-size: 18px;
         }
 
         p {
-        font-size: 33px;
+        font-size: 40px;
         }
     </style>
 </head>
@@ -36,11 +36,12 @@
             
             <h1 style="color: #f5eced">ALGORITHM PROCESSING</h1>
             <br>
-            <h3 style="color: #f5eced">"a SYNTHETIC Decision"</h3>
-            <h4 style="color: #f5eced">ให้ SYNTH มาด้วยกันหรือไม่?</h4>
-            <br>
-            <p id="cc-btn" style="color: #87cdee" onclick="castVote('1')">ให้ SYNTH ขึ้นยาน</button>
-            <p id="tt-btn" style="color: #efaeae" onclick="castVote('2')">ปฎิเสธนักท่องอวกาศ</button>
+            <h3 style="color: #f5eced">"การปลอบโยน"</h3>
+            <h4 style="color: #f5eced">SOLO กำลังเศร้า ใครควรจะปลอบเขา?</h4>
+            <p id="cc-btn" style="color: #ccffcc" onclick="castVote('1')">SYMPH</button>
+            <p id="tt-btn" style="color: #8df8ff" onclick="castVote('2')">TONIC</button>
+            <p id="bb-btn" style="color: #000000" onclick="castVote('3')">ไม่เลือกใครเลย</button>
+
         </div>
     </div>
 
@@ -50,7 +51,9 @@
             element.onclick = "";
             var element = document.getElementById("tt-btn");
             element.onclick = "";
-            myVotingChannel3b.publish("vote", choice, (err) => {
+            var element = document.getElementById("bb-btn");
+            element.onclick = "";
+            myVotingChannel2g.publish("vote", choice, (err) => {
                 console.log(choice);
                 console.log(err);
             });
