--- a/modules/interface/module3a.html
+++ b/modules/interface/module3a.html
@@ -4,24 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Module 2</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" />
+    <title>Module 3a</title>
+    <link rel="stylesheet1" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet2" href="style.css" />
+    <link rel="stylesheet3" href="https://fonts.googleapis.com/css?family=Kanit">
+    <style>
+        body {
+          background-color: #687296;
+        }
+
+        h1 {
+        font-size: 30px;
+        }
+
+        h3 {
+        font-size: 25px;
+        }
+
+        h4 {
+        font-size: 22px;
+        }
+
+        p {
+        font-size: 35px;
+        }
+    </style>
 </head>
 <body>
     <div class = content>
-        <div style="text-align: center; padding: 6%;">
-            <div class="card text-white bg-dark mb-3 voting-card">
-              <div class="card-header">ALGORITHM PROCESSING</div>
-              <div class="card-body">
-                <h3 class="card-title">Time to make a SYMPHONIC decision.</h3>
-                <h4 class="card-text">Let Dr.SYMPH come with us?</h4>
-                    <button id="cc-btn" type="button" class="btn btn-light btn-vote-option" onclick="castVote('1')">Dr.SYMPH On Baord</button>
-                    <br>
-                    <br>
-                    <button id="tt-btn" type="button" class="btn btn-light btn-vote-option" onclick="castVote('2')">Permission declined</button>
-              </div>
-            </div>
+        <div style="text-align: center; padding: 10%; font-family: kanit, sans-serif; text-shadow: 1px 1px 2px gray, 0 0 25px white, 0 0 5px whitesmoke">
+            
+            <h1 style="color: #f5eced">ALGORITHM PROCESSING</h1>
+            <br>
+            <h3 style="color: #f5eced">"a SYMPHONIC Decision"</h3>
+            <h4 style="color: #f5eced">ให้ Dr.SYMPH มาด้วยกันหรือไม่?</h4>
+            <p id="cc-btn" style="color: #87cdee" onclick="castVote('1')">Dr.SYMPH ขึ้นยาน</button>
+            <p id="tt-btn" style="color: #efaeae" onclick="castVote('2')">ปฎิเสธนักวิชาการ</button>
         </div>
     </div>
 
