--- a/modules/interface/module2.html
+++ b/modules/interface/module2.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet1" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet2" href="style.css" />
     <link rel="stylesheet3" href="https://fonts.googleapis.com/css?family=Kanit">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
         body {
           background-color: #687296;
@@ -15,19 +16,36 @@
 
         h1 {
         font-size: 30px;
+        font-family: Kanit, sans-serif;
         }
 
         h3 {
         font-size: 25px;
+        font-family: Kanit, sans-serif;
         }
 
         h4 {
         font-size: 25px;
+        font-family: Kanit, sans-serif;
         }
 
         p {
         font-size: 40px;
         }
+
+        .w3-button {
+        border: white;
+        font-size: 40px;
+        text-align: center;
+        display: inline-block;
+        background-color: #87cdee00;
+        font-family: kanit, sans-serif;
+        text-shadow: 1px 1px 2px gray, 0 0 25px white, 0 0 5px whitesmoke;
+        }
+
+        .w3-button1{ color: #87cdee;}
+        .w3-button2{ color: #bdbdbd;font-size: 25px;}
+        .w3-button3{ color: #ff8d9b;font-size: 25px;}
     </style>
 </head>
 <body>
@@ -38,9 +56,15 @@
               <br>
                 <h3 style="color: #f5eced">"จุดหมายต่อไปคือที่ใด?"</h3>
                 <h4 style="color: #f5eced">Earth หรือ Tau Ceti G?</h4>
-                    <p id="cc-btn" style="color: #87cdee" onclick="castVote('1')">Earth</p>
-                    <p id="tt-btn" style="color: #bdbdbd; font-size: 35px;" onclick="castVote('2')">Tau Ceti G</p>
-                    <p id="aa-btn" style="color: #ff8d9b; font-size: 30px;" onclick="castVote('3')">High-Frequency Zone</p>
+                    <br>
+                    <button id="cc-btn" type="button" class="w3-button w3-button1 w3-border w3-round-large w3-ripple" onclick="castVote('1')">Earth</button>
+                    <br>
+                    <br>
+                    <button id="tt-btn" type="button" class="w3-button w3-button2 w3-border w3-round-large w3-ripple" onclick="castVote('2')">Tau Ceti G</button>
+                    <br>
+                    <br>
+                    <button id="aa-btn" type="button" class="w3-button w3-button3 w3-border w3-round-large w3-ripple" onclick="castVote('3')">High-Frequency Zone</button>
+           
         </div>
     </div>
 
