update new module

--- a/module-control-index.html
+++ b/module-control-index.html
@@ -32,6 +32,20 @@
                     <button id="gg-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2g.2')">Module 2g SYNTH</button>
                     <hr>
                     <button id="hh-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('btc')">Trading Game vote</button>
+                    <hr>
+                    <button id="ii-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2d-symph')">Module นายพล 2d SYMPH / 2F.1</button>
+                    <hr>
+                    <button id="jj-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2d-synth')">Module นายพล 2d SYNTH / 2F.1</button>
+                    <hr>
+                    <button id="kk-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2e')">Module นายพล 2e</button>
+                    <hr>
+                    <button id="ll-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2f')">Module นายพล 2f</button>
+                    <hr>
+                    <button id="mm-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1a')">Module 5.1a</button>
+                    <hr>
+                    <button id="nn-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1b')">Module 5.1b</button>
+                    <hr>
+                    <button id="นน-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.2b')">Module 5.2b</button>
               </div>
             </div>
         </div>
