--- a/module-control-index.html
+++ b/module-control-index.html
@@ -18,13 +18,38 @@
               <div class="card-body">
                 <h5 class="card-title">Module Controller</h5>
                     <button id="aa-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('0')">Waiting room</button>
+                    <hr>
                     <button id="bb-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('1')">Module 1</button>
+                    <hr>
                     <button id="cc-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2')">Module 2</button>
+                    <hr>
                     <button id="dd-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('3a')">Module 3a</button>
+                    <hr>
                     <button id="ee-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('3b')">Module 3b</button>
+                    <hr>
                     <button id="ff-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2g.1')">Module 2g SYMPH</button>
+                    <hr>
                     <button id="gg-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2g.2')">Module 2g SYNTH</button>
+                    <hr>
                     <button id="hh-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('btc')">Trading Game vote</button>
+                    <hr>
+                    <button id="ii-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2d-symph')">Module นายพล 2d SYMPH / 2F.1</button>
+                    <hr>
+                    <button id="jj-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2d-synth')">Module นายพล 2d SYNTH / 2F.1</button>
+                    <hr>
+                    <button id="kk-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2e')">Module นายพล 2e</button>
+                    <hr>
+                    <button id="ll-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2f')">Module นายพล 2f</button>
+                    <hr>
+                    <button id="mm-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1aSymph')">Module 5.1a SYMPH</button>
+                    <hr>
+                    <button id="nn-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1bSymph')">Module 5.1b SYMPH</button>
+                    <hr>
+                    <button id="mm-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1aSynth')">Module 5.1a SYNTH</button>
+                    <hr>
+                    <button id="nn-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1bSynth')">Module 5.1b SYNTH</button>
+                    <hr>
+                    <button id="นน-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.2b')">Module 5.2b</button>
               </div>
             </div>
         </div>
