--- a/module-control-index.html
+++ b/module-control-index.html
@@ -41,9 +41,13 @@
                     <hr>
                     <button id="ll-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('2f')">Module นายพล 2f</button>
                     <hr>
-                    <button id="mm-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1a')">Module 5.1a</button>
+                    <button id="mm-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1aSymph')">Module 5.1a SYMPH</button>
                     <hr>
-                    <button id="nn-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1b')">Module 5.1b</button>
+                    <button id="nn-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1bSymph')">Module 5.1b SYMPH</button>
+                    <hr>
+                    <button id="mm-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1aSynth')">Module 5.1a SYNTH</button>
+                    <hr>
+                    <button id="nn-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.1bSynth')">Module 5.1b SYNTH</button>
                     <hr>
                     <button id="นน-btn" type="button" class="btn btn-light btn-vote-option" onclick="castStage('5.2b')">Module 5.2b</button>
               </div>
