--- a/modules/graph/graph5-1a.html
+++ b/modules/graph/graph5-1a.html
@@ -38,16 +38,16 @@ function updateChartData() {
   FusionCharts.items["vote-chart5.1a"].setJSONData({
     chart: {
       caption: "Terminal",
-      subCaption: "ให้ Dr. SYMPH ลงไปสำรวจดาวหรือไม่?",
+      subCaption: "ให้ Dr. SYMPH/SYNTH ลงไปสำรวจดาวหรือไม่?",
       theme: "fusion",
     },
     data: [
     {
-    label: "Dr.SYMPH สำรวจ",
+    label: "Dr.SYMPH/SYNTH สำรวจ",
     value: choiceTwentyFour,
   },
   {
-    label: "Dr.SYMPH อยู่บนยาน",
+    label: "Dr.SYNTH อยู่บนยาน",
     value: choiceTwentyFive,
   },
     ],
