--- a/modules/graph/graph5-1b.html
+++ b/modules/graph/graph5-1b.html
@@ -43,7 +43,7 @@ function updateChartData() {
     },
     data: [
         {
-        label: "Dr.SYMPH",
+        label: "Dr.SYMPH/SYNTH",
         value: choiceTwentySix,
         },
         {
