--- a/modules/interface/module2d-synth.html
+++ b/modules/interface/module2d-synth.html
@@ -62,7 +62,7 @@
             <button id="tt-btn" type="button" class="w3-button w3-button2 w3-border w3-round-large w3-ripple" onclick="castVote('3')">เดินทางผ่านรูหนอน</button>
             <br>
             <br>
-            <button id="bb-btn" type="button" class="w3-button w3-button3 w3-border w3-round-large w3-ripple" onclick="castVote('4')">High-Frequency Zone</button>
+            <button id="bb-btn" type="button" class="w3-button w3-button3 w3-border w3-round-large w3-ripple" onclick="castVote('4')">อ้อมรูหนอน</button>
 
         </div>
     </div>
