--- a/modules/interface/module2g-1.html
+++ b/modules/interface/module2g-1.html
@@ -56,7 +56,7 @@
             <h3 style="color: #f5eced">"การปลอบโยน"</h3>
             <h4 style="color: #f5eced">SOLO กำลังเศร้า ใครควรจะปลอบเขา?</h4>
             <br>
-            <button id="cc-btn" type="button" class="w3-button w3-button1 w3-border w3-round-large w3-ripple" onclick="castVote('1')">SYMPH</button>
+            <button id="cc-btn" type="button" class="w3-button w3-button1 w3-border w3-round-large w3-ripple" onclick="castVote('1')">Dr.SYMPH</button>
             <br>
             <br>
             <button id="tt-btn" type="button" class="w3-button w3-button2 w3-border w3-round-large w3-ripple" onclick="castVote('2')">TONIC</button>
