--- a/current-module.html
+++ b/current-module.html
@@ -31,6 +31,8 @@
       <br>
       <h1 style="color: #f5eced; text-align: center; padding: 10%; font-family: kanit, sans-serif; text-shadow: 1px 1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;">standing by ...</h1>
       </div>
+
+      <iframe src="https://openchat-bf02b.web.app/chat/room2" style="height: 300px;width:400px;text-align: center;" title="Iframe Example"></iframe>
   </body>
 
   <script src="current-module.js" type="text/javascript"></script>
